force-app/main/default/objects/Notes__c/Notes__c.object-meta.xml
<CustomObject>
    <label>Notes</label>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>