force-app/main/default/objects/Notes__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Doc Hard Copy</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>File Cabinet Case</fullName>
            </value>
            <value>
                <fullName>File Cabinet Client</fullName>
            </value>
            <value>
                <fullName>Hand-Delivered</fullName>
            </value>
            <value>
                <fullName>Initial Face to Face</fullName>
            </value>
            <value>
                <fullName>Juvenile</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
            <value>
                <fullName>ROA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>