force-app/main/default/objects/Notes__c/fields/Contact_was_initiated_received__c.field-meta.xml
<CustomField>
    <fullName>Contact_was_initiated_received__c</fullName>
    <label>Contact was initiated/received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>