force-app/main/default/objects/Notes__c/fields/Involved_Persons__c.field-meta.xml
<CustomField>
    <fullName>Involved_Persons__c</fullName>
    <label>Involved Persons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>