force-app/main/default/objects/Notes__c/fields/Person_Role__c.field-meta.xml
<CustomField>
    <fullName>Person_Role__c</fullName>
    <label>Person Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>