force-app/main/default/objects/Notes__c/fields/Travel_Duration__c.field-meta.xml
<CustomField>
    <fullName>Travel_Duration__c</fullName>
    <label>Travel Duration</label>
    <type>Time</type>
</CustomField>